# uuv-code

./: README.md
install/: local_setup.sh  setup.sh
install/uuv_compass_driver/lib/uuv_compass_driver/: compass_driver_node
launch/state_estimator/: state_estimator.launch.py
log/: latest_build
src/launch/: imu_driver_launch.py
src/pwm_driver/: package.xml  setup.cfg  setup.py
src/pwm_driver/launch/: pwm_driver_launch.xml
src/pwm_driver/pwm_driver/: pwm_driver.py
src/pwm_driver/test/: test_setpwm.py
src/pwm_msg/: CMakeLists.txt  package.xml
src/pwm_msg/msg/: ThrustersPWM.msg
src/uuv_baro_ext/: package.xml  setup.cfg  setup.py
src/uuv_baro_ext/launch/: external_barometer_launch.py
src/uuv_baro_ext/uuv_baro_ext/: baro_ext.py  ms5837.py
src/uuv_description/: CMakeLists.txt  package.xml
src/uuv_description/launch/: uuv_tf.launch.py
src/uuv_description/urdf/: uuv.urdf.xacro
src/uuv_imu_driver/: package.xml  setup.cfg  setup.py
src/uuv_imu_driver/uuv_imu_driver/: uuv_imu_driver.py  uuv_imu_driver.yml
src/uuv_state_estimator/: CMakeLists.txt  package.xml
src/uuv_state_estimator/include/uuv_state_estimator/: imu_corrector.hpp  mahony.hpp
src/uuv_state_estimator/launch/: state_estimator.launch.py
src/uuv_state_estimator/src/: state_estimator_node.cpp
src/uuv_thruster_driver/: CMakeLists.txt  package.xml
src/uuv_thruster_driver/launch/: thruster_driver_launch.py
src/uuv_thruster_driver/src/: thruster_driver.cpp
uuv_compass_driver/: setup.cfg  setup.py
uuv_compass_driver/uuv_compass_driver/: compass_driver_node.py
(+6 files in other folders)
